High contrast fix in Sources tools panel
Before: https://imgur.com/a/y0eTN5g
After: https://imgur.com/a/AzHuoNn

--- a/front_end/browser_debugger/eventListenerBreakpoints.css
+++ b/front_end/browser_debugger/eventListenerBreakpoints.css
@@ -51,3 +51,20 @@
 :host-context(.-theme-with-dark-background) .breakpoint-hit .breakpoint-hit-marker {
     background-color: hsl(46, 98%, 22%);
 }
+
+@media (forced-colors: active) {
+    .tree-outline.hide-selection-when-blurred .selected:focus[data-keyboard-focus="true"] {
+        forced-color-adjust: none;
+        background: Canvas !important;
+        box-shadow: 0 0 0 1px Highlight inset !important;
+    }
+    .tree-outline.hide-selection-when-blurred .selected:focus[data-keyboard-focus="true"] span {
+        color: ButtonText !important;
+    }
+    .tree-outline.hide-selection-when-blurred .selected:focus[data-keyboard-focus="true"]::before {
+        background-color: ButtonText !important;
+    }
+    .tree-outline.hide-selection-when-blurred .selected:focus[data-keyboard-focus="true"]:not(.parent)::before {
+        background-color: transparent !important;
+    }
+}
